samples/_failures_safe/1761513629_673df7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2612b8c9.c: In function ‘main’:
./samples/SAFE/__tmp_2612b8c9.c:162:5: error: expected expression at end of input
  162 |     while (
      |     ^~~~~
./samples/SAFE/__tmp_2612b8c9.c:162:5: error: expected declaration or statement at end of input
